# mojibar

./: .gitignore  Cargo.toml  README.md  TODO.md
desktop/linux/: mojibar.desktop
docs/: index.html  mojibar.js  sw.js
emojis/: README.txt  create_data.py  emoji-min.json  emoji-trie.notes  emoji.json  emoji.py  emoji.txt  emojis.json  emojis.txt  get-rid.txt  openmoji-raw.html
fail-lol/: trie.rs
install/linux/: install.sh  uninstall.sh
linux/: install-deps.sh  install.sh
src/: app.rs  emoji.rs  lib.rs  main.rs
