[package]
name = "mojibar"
version = "0.1.0"
authors = ["Luke Schenk <nineofpine@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clipboard = "0.5.0"
console_error_panic_hook = "0.1.7"
eframe = "0.15.0" # Gives us egui, epi and web+native backends
lazy_static = "1.4.0"
radix-tree = "0.1.0"
serde = { version = "1.0", features = ["derive"], optional = false}
serde_json = "1.0"

[features]
default = []
# this persistence feature was causing serde to not be included
#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
